<resources>
    <string name="app_name">مدارس الأحساء الأهلية</string>
    <string name="homework">الواجبات</string>
    <string name="lessons">الدروس</string>
    <string name="messages">الرسائل</string>
    <string name="tables">الجدول</string>
    <string name="rate">التقييمات</string>
    <string name="P_1">جدول \n الدراسي</string>
    <string name="P_2">متابعة \n الطالب</string>
    <string name="P_3">سلوك \n الطالب</string>
    <string name="P_4">الخطه \n الاسبوعيه</string>
    <string name="no_data">لا يوجد بيانات!</string>
    <string name="no_connection">لا يوجد انترنت!</string>
    <string name="txt_email">البريد الالكتروني</string>
    <string name="txt_comment">رجاء ادخل البيانات المطلوبه</string>
    <string name="txt_password">كلمة المرور</string>
    <string name="action_sign_in">تسجيل الدخول</string>
    <string name="action_forget_password">نسيت كلمة المرور</string>
    <string name="action_parent_create">انشاء حساب ولي امر</string>
    <string name="txt_lang">اللغة</string>
    <string name="logo_desc">school_logo</string>
    <string name="login_error">خطأ</string>
    <string name="login_error_msg">أدخل البريد الالكتروني وكلمة المرور</string>
    <string name="login_failed_msg">خطأ في البريد الالكتروني او كلمة المرور</string>
    <string name="login_positive_btn">تم الدخول بنجاح</string>
    <string name="txt_no_data">لا يوجد بيانات في هذه الصفحة!!</string>
</resources>